--- a/rfid/stm32f1/Makefile
+++ b/rfid/stm32f1/Makefile
@@ -11,14 +11,16 @@ TARGET = rfid_demo
 ################################################################################
 # Set the root directory of the ucdev enviorement 
 ################################################################################
-UCDEV_ROOT=../../..
+UCDEV_ROOT=../../../ucdev
 
 ################################################################################
 # Sources
 ################################################################################
 C_SOURCES += main.c
-C_SOURCES += dis2.c
 C_SOURCES += i2c.c
+
+C_SOURCES += ../common/dis2.c
+C_SOURCES += ../common/rfid_demo.c
 
 
 
