ignore eclipse files

--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,4 @@
-32f_testing/.project
-cortex_romtable/stm32f1/.project
-gnss_simple/.project
-i2c/.project
-ir/.project
-radio/si433x/.project
-radio/s2lp/.project
-rfid/stm32f1/.project
-riscv32f1/.project
-spi/.project
-usbd/stm32f072xB/.project
-usbd/.project
-ws2812/stm32f0/.project
-gd32vftest/.project
-32f_testing/.cproject
-cortex_romtable/stm32f1/.cproject
-gnss_simple/.cproject
-i2c/.cproject
-ir/.cproject
-radio/si433x/.cproject
-radio/s2lp/.cproject
-rfid/stm32f1/.cproject
-riscv32f1/.cproject
-spi/.cproject
-usbd/stm32f072xB/.cproject
-usbd/.cproject
-ws2812/stm32f0/.cproject
-gd32vftest/.cproject
+*/.project
+*/.cproject
+todo/*/.project
+todo/*/.cproject
