--- a/todo/radio/si433x/Makefile
+++ b/todo/radio/si433x/Makefile
@@ -11,7 +11,7 @@ TARGET = radio_demo
 ################################################################################
 # Set the root directory of the ucdev enviorement 
 ################################################################################
-UCDEV_ROOT=../../..
+UCDEV_ROOT=../../../../ucdev
 
 ################################################################################
 # Sources
