Thw Si4x6x can receive at non-default bitrates, but there are still magic values used

--- a/radio/Makefile
+++ b/radio/Makefile
@@ -26,6 +26,8 @@ C_SOURCES += rfm69.c
 C_SOURCES += si4x3x.c
 C_SOURCES += si4x6x.c
 
+C_SOURCES += magic.c
+
 
 C_INCLUDES += $(U8G2_DIR) 
 CFLAGS += -DU8X8_WITH_USER_PTR
