--- a/i2c/Makefile
+++ b/i2c/Makefile
@@ -51,6 +51,7 @@ C_SOURCES += bmp280.c
 C_SOURCES += scd4x.c
 
 C_SOURCES += kt0803.c
+C_SOURCES += rda5807.c
 
 C_SOURCES += $(LIBHALGLUE_ROOT)/bshal/stm32/bshal_i2cm_stm32.c
 
