switch display type

--- a/gnss_simple/Makefile
+++ b/gnss_simple/Makefile
@@ -4,7 +4,9 @@
 MCU?=STM32F103xB
 #MCU?=STM32F411xE
 
-DIS?=ST7735
+#DIS?=ST7735
+DIS?=SSD1306
+
 ################################################################################
 # Set Output Filename 
 ################################################################################
@@ -13,7 +15,7 @@ TARGET = gnss_demo
 ################################################################################
 # Set the root directory of the ucdev enviorement 
 ################################################################################
-UCDEV_ROOT=../..
+UCDEV_ROOT=../../ucdev
 
 
 U8G2_DIR = $(UCDEV_ROOT)/ext/u8g2/csrc
