ignore eclipse files

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,51 @@
 */.cproject
 todo/*/.project
 todo/*/.cproject
+./todo/cortex_romtable/stm32f1/.project
+./todo/cortex_romtable/.project
+./todo/ir/.project
+./todo/radio/si433x/.project
+./todo/radio/s2lp/.project
+./todo/riscv32f1/.project
+./todo/spi/.project
+./todo/usbd/stm32f103xB/.project
+./todo/usbd/.project
+./todo/usbd/stm32f072xB/.project
+./todo/gnss_simple/.project
+./rfid/stm32f1/.project
+./rfid/.project
+./blinky/.project
+./instruction_latency/.project
+./dhrystone/.project
+./ramtest/.project
+./ucglib/.project
+./32f_testing/.project
+./i2c/.project
+./radio/.project
+./gecko/.project
+./spi_flash/.project
+./ds28b20/.project
+./todo/cortex_romtable/stm32f1/.cproject
+./todo/cortex_romtable/.cproject
+./todo/ir/.cproject
+./todo/radio/si433x/.cproject
+./todo/radio/s2lp/.cproject
+./todo/riscv32f1/.cproject
+./todo/spi/.cproject
+./todo/usbd/stm32f103xB/.cproject
+./todo/usbd/.cproject
+./todo/usbd/stm32f072xB/.cproject
+./todo/gnss_simple/.cproject
+./rfid/stm32f1/.cproject
+./rfid/.cproject
+./blinky/.cproject
+./instruction_latency/.cproject
+./dhrystone/.cproject
+./ramtest/.cproject
+./ucglib/.cproject
+./32f_testing/.cproject
+./i2c/.cproject
+./radio/.cproject
+./gecko/.cproject
+./spi_flash/.cproject
+./ds28b20/.cproject
