--- a/dtu_demo/Makefile
+++ b/dtu_demo/Makefile
@@ -8,7 +8,7 @@ DIS?=ST7735
 ################################################################################
 # Set Output Filename 
 ################################################################################
-TARGET = at_demo
+TARGET = dtu_demo
 
 ################################################################################
 # Set the root directory of the ucdev enviorement 
