--- a/wireless_ac_switch/Makefile
+++ b/wireless_ac_switch/Makefile
@@ -54,6 +54,7 @@ C_INCLUDES += $(U8G2_DIR)
 C_INCLUDES += $(LIBHALGLUE_ROOT)/bshal/extlib/
 C_INCLUDES += $(LIBHALGLUE_ROOT)/common/
 C_INCLUDES += $(LIBHALGLUE_ROOT)/bshal/
+C_INCLUDES += $(LIBHALGLUE_ROOT)/bshal/stm32
 C_INCLUDES += $(LIBHALGLUE_ROOT)/hal/
 
 C_INCLUDES += $(UCDEV_ROOT)/lib/bsrfid/
