--- a/wireless_dongle/Makefile
+++ b/wireless_dongle/Makefile
@@ -22,9 +22,10 @@ C_SOURCES += wireless_dongle.c
 C_SOURCES += sensors.c
 C_SOURCES += timer_stm32.c
 C_SOURCES += usb.c
+C_SOURCES += serial.c
 
 # USB
-C_SOURCES += $(LIBHALGLUE_ROOT)/common/serialnumber.c
+#C_SOURCES += $(LIBHALGLUE_ROOT)/common/serialnumber.c
 C_SOURCES += $(LIBHLUSBD_ROOT)/drivers/usbd_stm.c
 C_SOURCES += $(LIBHLUSBD_ROOT)/usbd.c
 C_SOURCES += $(LIBHLUSBD_ROOT)/usbd_descriptors.c
